complete introduction and minor runthrough - only the conclusion remains...dun dun duuuuun

--- a/mapping.tex
+++ b/mapping.tex
@@ -53,7 +53,9 @@ The term \emph{mapping} is used in mathematics, computer science, and related te
 
 In the mathematics context, the use of the term \emph{mapping} varies subtly according to the sub-discipline within mathematics in which it is used and often between specific mathematicians; however it is acceptable to use the word as a synonym for \emph{function}. A function in mathematics describes an associative relationship between two sets of numbers. One set of numbers is referred to as a \emph{domain} or \emph{set of inputs} and the other set is referred to as a \emph{codomain}, \emph{range}, or \emph{set of outputs}. Mathematicians often say that a function "maps" a domain to or onto a range, hence the reason for using the term \emph{mapping} as a synonym for \emph{function} \cite{functionMapping}.
 
-Strictly speaking in mathematics, a function can only represent a \emph{one-to-one mapping} or a \emph{many-to-one mapping}. For now it is helpful to know that a property of both types of mapping is that every element in the input (domain) set is associated by the function with one and only one element in the output (range) set. A corollary statement about a one-to-one and many-to-one mappings is that every element in the output set might be associated to one element (one-to-one) or many elements (many-to-one) in the input set. This language should become more clear as the usage of the terms \emph{one-to-one} and \emph{many-to-one} are explored in the remainder of the chapter.
+To avoid confusion in later chapters, note that this the opposite of how outputs and inputs are referred to in a DMI mapping. The set of output signals is actually the domain of a DMI mapping and the set of input signals is the codomain of a DMI mapping. 
+
+Strictly speaking in mathematics, a function can only represent a \emph{one-to-one mapping} or a \emph{many-to-one mapping}. It is helpful to know that a property of both types of mapping is that every element in the input (domain) set is associated by the function with one and only one element in the output (range) set. A corollary statement about both one-to-one and many-to-one mappings is that every element in the output set might be associated to one element (one-to-one) or many elements (many-to-one) in the input set. This language should become more clear as the usage of the terms \emph{one-to-one} and \emph{many-to-one} are explored in the remainder of the chapter.
 
 The following are examples of equations that represent functions:
 
@@ -68,7 +70,7 @@ In addition to both being functions, equation \ref{eq1} is a one-to-one mapping 
 
 Equation \ref{eq1} is the canonical notation for representing a mapping/function labeled \begin{math}f\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}y\end{math}. Equation \ref{eq2} represents a mapping/function labeled \begin{math}g\end{math} where the input element is labeled \begin{math}x\end{math} and the output element is labeled \begin{math}z\end{math}. 
 
-To calculate the mapping that is implied by these two mathematical transformations, substitute any real number (since the set of all real numbers is the input set) for the symbol \begin{math}x\end{math}. By this logic, equation \ref{eq1} represents the mapping where every real number \begin{math}x\end{math} is mapped to the real number \begin{math}y\end{math} that is the value of \begin{math}x + 1\end{math}. Equation \ref{eq2} represents the mapping where every real number \begin{math}x\end{math} is mapped to the real number \begin{math}z\end{math} that is the value of \begin{math}x^{2}\end{math}. Equation \ref{eq2} is a many-to-one mapping because it maps both the positive and negative of every input number to the square of that number; unlike equation \ref{eq1} which maps every input number to an output number that no other input number is mapped to.
+To calculate the mapping that is implied by these two mathematical transformations, substitute any real number (since the set of all real numbers is the input set) for the symbol \begin{math}x\end{math}. By this logic, equation \ref{eq1} represents the mapping where every real number \begin{math}x\end{math} is mapped to the real number \begin{math}y\end{math} that is the value of \begin{math}x + 1\end{math}. Equation \ref{eq2} represents the mapping where every real number \begin{math}x\end{math} is mapped to the real number \begin{math}z\end{math} that is the value of \begin{math}x^{2}\end{math}. Equation \ref{eq2} is a many-to-one mapping because it maps both the positive and negative of every input number to the square of that number (the square of any real number is always positive); unlike equation \ref{eq1} which maps every input number to an output number that no other input number is mapped to.
 
 \subsection{Cardinality in Mathematics}
 
@@ -105,7 +107,7 @@ A \emph{bijection} is a function that is both an \emph{injection} and a \emph{su
 
 Figure \ref{fig:globfig} summarizes the possible types of functions using these distinctions.
 
-Within mathematics, cardinality is a concept that allows one to reason about the relative sizes of different sets. It is particularly useful when comparing infinite sets. It allows one to reason correctly, for example, that the infinite size of the set of all real numbers is larger than the set of all positive integers (natural numbers).
+Within mathematics, cardinality is a concept that allows one to reason about the relative sizes of different sets. It is particularly useful when comparing infinite sets. It allows one to reason correctly, for example, that the infinite size of the set of all real numbers is larger than the infinite size of the set of all positive integers (natural numbers). Yes, infinity can be proven to be larger than infinity!
 
 Two sets are defined to have the same \emph{cardinality} if there exists a bijection between the two sets. It follows from the definition of injection that if there exists an injection from set \emph{A} to set \emph{B}, but no bijection, then the cardinality of B is greater than the cardinality of A \cite{cardmath2010}.
 
@@ -118,7 +120,7 @@ In the computer science context, a mapping is an abstract data type or concrete 
 
 Abstractly and simply, the one and only way to store data of any kind (the value "0", the value "1", some text, an image, a sound, a recorded signal) in a computer of any kind, such that one can reliably retrieve the data later, is to put the data in some "bucket" that has some "label". The words "bucket" and "label", as used here, are not well-defined in computer science. But they help to unobtrusively make the point that if the data has no label that is associated with it or equivalently if the label has no unique memory location associated with it, then practically, it cannot be retrieved. In the scenario of a computer processor accessing internal memory, \emph{bucket} and \emph{label} could be replaced by \emph{memory location} and \emph{memory address} respectively.
 
-As an example from the music information retrieval context, if one wants to be able to store a large amount of sheet music such that it can be found later, one needs some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
+As an example from the music information retrieval context, if a librarian wants to be able to store a large amount of sheet music such that it can be found later, the librarian needs some system to catalog or index the material such that a piece of sheet music can be referred to by some label. In the case of a library, this label is often a call number, the title of the piece, the name of the composer, etc.
 
 Just like a reference library can use many different labeling systems to catalog the sheet music stored within its walls so that it can be retrieved with minimum headaches, a computer system can internally utilize many different abstract data types or concrete data structures. In both cases, the best choice is dependent on the material or data being cataloged or indexed. A mapping as a data structure in computer science parlance then, can be understood as a particular type of system for labeling data.
 
@@ -132,7 +134,7 @@ So in a computer system, one can create multiple mappings that each associate th
 
 Within computer science, cardinality is a concept used in relational database systems \cite{carddata1987}. 
 
-A relational database can be seen as a very robust and flexible \emph{data labeling system}, in reference to the discussion in section \ref{sec:Mappings in Computer Science}. A relational database is defined as a set of relations, where a relation is defined as a set of lists of attributes. Each list in the set has the same attributes as every other list in the set. An attribute defines a property that can take any value constrained by the set of values that are defined for each particular attribute. A relation is usually described by a table as in Table \ref{tab:studentrelation}.
+A relational database can be seen as a very robust and flexible \emph{data labeling system}, in reference to the discussion in Section \ref{sec:Mappings in Computer Science}. A relational database is defined as a set of relations, where a relation is defined as a set of lists of attributes. Each list in the set has the same attributes as every other list in the set. An attribute defines a property that can take any value constrained by the set of values that are defined for each particular attribute. A relation is usually described by a table as in Tables \ref{tab:studentrelation}, \ref{tab:facultyrelation}, and \ref{tab:relation}. Together these three relations define one database.
 
 \begin{table}
     \begin{center}
@@ -146,7 +148,7 @@ A relational database can be seen as a very robust and flexible \emph{data label
     \hline
     \end{tabular}
     \end{center}
-    \caption{Example of a database relation - Student Table}
+    \caption{Example of a database defined by 3 relations - Student Relation}
     \label{tab:studentrelation}
 \end{table}
 
@@ -160,7 +162,7 @@ A relational database can be seen as a very robust and flexible \emph{data label
     \hline
     \end{tabular}
     \end{center}
-    \caption{Example of a database relation - Faculty Table}
+    \caption{Faculty Relation}
     \label{tab:facultyrelation}
 \end{table}
 
@@ -176,7 +178,7 @@ A relational database can be seen as a very robust and flexible \emph{data label
     \hline
     \end{tabular}
     \end{center}
-    \caption{Example of a database relation - Pairing Table}
+    \caption{Pairing Relation}
     \label{tab:relation}
 \end{table}
 
@@ -202,12 +204,12 @@ In physical terms, when two formerly intrinsically coupled aspects of system are
 In the context of DMI research this new degree of freedom is the freedom to choose a mapping \cite{hunt2003}. Mapping as used in this context is very similar to how the term is used in both the mathematics and computer science context. Each context provides an understanding that is well suited to manipulate one of two possible conceptual layers in a mapping system. These two contexts have also been referred to as a \emph{systems} point of view and a \emph{functional} point of view respectively \cite{nort2010}. 
 
 \begin{enumerate}
-\item The set of sensors embedded in the control mechanism outputs a set of signals, which we will refer to as \emph{output signals}. The sound generation mechanism outputs sound that is controlled through a set of \emph{input signals} defined by the software that is responsible for the sound generation. Therefore, for any given control mechanism and sound generation mechanism there is a choice of how to associate the two sets of signals (output signals from the control mechanism and input signals from the sound generation mechanism) with each other much like an associative array in the computer science context. Importantly, this is a choice that is not independently available when constructing, for example, a violin because the two sets of signals (if this distinction between control mechanism and sound generation mechanism is imagined in a violin) in a violin are physically coupled and inseparable. It is not a choice that is explicitly made when constructing an acoustic instrument.
+\item The set of sensors embedded in the control mechanism outputs a set of signals, which we will refer to as \emph{output signals}. The sound generation mechanism outputs sound that is controlled through a set of \emph{input signals} defined by the software that is responsible for the sound generation. Therefore, for any given control mechanism and sound generation mechanism there is a choice of how to associate the two sets of signals (output signals from the control mechanism and input signals from the sound generation mechanism) with each other, much like an associative array in the computer science context. Importantly, this is a choice that is not independently available when constructing, for example, a violin because the two sets of signals (if this distinction between control mechanism and sound generation mechanism is imagined in a violin) in a violin are physically coupled and inseparable. It is not a choice that is explicitly made when constructing an acoustic instrument.
 
-\item Furthermore, there is a second lower level form of mapping when dealing with a specific pair of associated signals. Because it is unlikely that any given signal output by a control device is calibrated to a particular input signal in a sound generation device that one might associate with the given output signal, we require a second set of relations beyond a binary associated/not associated. Any given output signal might be capable of outputing values that are outside the set of values that a particular input handles or simply be outputting a different data type altogether. In electronics, this is called \emph{signal conditioning} and can be handled completely in the analog components that produce the signals. If this signal conditioning is not handled in the analog hardware and is modified dynamically in the software of the DMI after analog to digital conversion of the signal then this signal conditioning is handled by the mapping system. In this case, a mapping in the functional, mathematical sense of the word is necessary to transform the output signal so that the values reliable fall within the set of acceptable input values. Performing signal conditioning as part of the DMI mapping, as opposed to as part of the control mechanism, has the benefit of not requiring any change in the analog electronics of the DMI if the associative mapping layer
+\item Furthermore, there is a second, lower level form of mapping when dealing with a specific pair of associated signals. Because it is unlikely that any given signal output by a control device is calibrated to a particular input signal in a sound generation device that one might associate with the given output signal, we require a second set of relations beyond a binary associated/not associated. Any given output signal might be capable of outputing values that are outside the set of values that a particular input handles or simply be outputting a different data type altogether. In electronics, this is called \emph{signal conditioning} and can be handled completely in the analog components that produce the signals. If this signal conditioning is not handled in the analog hardware and is modified dynamically in the software of the DMI after analog to digital conversion of the signal then this signal conditioning is handled by the mapping system. In this case, a mapping in the functional, mathematical sense of the word is necessary to transform the output signal so that the values reliable fall within the set of acceptable input values. Performing signal conditioning as part of the DMI mapping, as opposed to as part of the control mechanism, has the benefit of not requiring any change in the analog electronics of the DMI, if the associative mapping layer changes.
 \end{enumerate}
 
-A prototypical mapping system can specify not only the associations between two sets of signals (pairs of connected signals), but associate a function with each pair of connected signals that specifies how to transform/condition the signal before copying the value to an input. This function might in fact be simply \begin{math}y = x\end{math} in the case where no calibration is needed, however the point is it is not practical to assume that this will always be an acceptable mapping function between an output and input and signal conditioning might be included as a second layer in the a mapping system.
+A prototypical mapping system can specify not only the associations between two sets of signals (pairs of connected signals), but associate a function with each pair of connected signals that specifies how to transform/condition the signal before copying the value to an input. This function might, in fact, be simply \begin{math}y = x\end{math} in the case where no calibration is needed, however the point is that it is not practical to assume that this will always be an acceptable mapping function between an output and input. Therefore, signal conditioning might be useful to include as a second layer in a mapping system.
 
 This physical decoupling between the control mechanism, the mapping system, and the sound generation mechanism creates a modularity between the three components that can be exploited to simplify the DMI development and maintenance process.
 
@@ -215,13 +217,13 @@ This physical decoupling between the control mechanism, the mapping system, and 
 
 The creation, evolution, and stabilization of the design of a DMI is inherently a tightly iterative process. A violin luthier must be comfortable enough playing a violin to develop an aesthetic sense of what effect the countless decisions that are made in the process of building a violin have on the experiential quality of the instrument that they are creating. Whether a particular decision is the right one can only truly be evaluated after the decision is made and someone plays the violin. 
 
-Similarly, a team of people building a DMI will often make a construction decision, evaluate the effect of that decision, make some changes, and repeat. This is often referred to as iterative development and occurs in any serious design process whether or not it is ever made explicit \cite{iterative2003}. 
+Similarly, a team of people building a DMI will often make a construction decision, evaluate the effect of that decision, make some changes, and repeat. This process is often referred to as \emph{iterative development} and occurs in any serious design process whether or not it is ever made explicit \cite{iterative2003}. 
 
-Because such iterative development is so beneficial to the development of DMIs, people often use various platforms and frameworks as common foundational building blocks for such systems. These environments often take care of implementing higher level functionality for controlling and generating audio in realtime or interfacing with hardware and thus allow one to quickly test ideas for a DMI and focus on experimenting with the aspects of the control mechanism and sound generation that are unique to the particular project before investing too much time and money into custom parts without assurance that the ideas are viable in a basic sense. For the control hardware there are platforms like Arduino. Coding environments like Max/MSP and code libraries like STK simplify the development of synthesizer modules for sound generation. In an effort to provide a similar foundation for creating mapping systems, the Digital Orchestra Toolbox was created as part of the McGill Digital Orchestra project and includes components representing the common subroutines used in a mapping system. More recently, this functionality has been reimplemented as a C library called Libmapper at the IDMIL at McGill University. Libmapper has several characteristics which make it a desirable system for configuring mappings. 
+Because such iterative development is so beneficial to the development of DMIs, people often use various platforms and frameworks as common foundational building blocks for such systems. These environments often take care of implementing higher level functionality for controlling and generating audio in realtime or interfacing with hardware. Thus, they allow one to quickly test ideas for a DMI and focus on experimenting with the aspects of the control mechanism and sound generation that are unique to the particular project before investing too much time and money into custom parts without assurance that the ideas are viable in a basic sense. For the control hardware, there are platforms like Arduino. Coding environments like Max/MSP and code libraries like STK simplify the development of synthesizer modules for sound generation. In an effort to provide a similar foundation for creating mapping systems, the Digital Orchestra Toolbox was created as part of the McGill Digital Orchestra project and includes components representing the common subroutines used in a mapping system. More recently, this functionality has been reimplemented as a C library called Libmapper at the IDMIL at McGill University. Libmapper has several characteristics which make it a desirable system for configuring mappings. 
 
-One is that a mapping between control and sound generation can be modified without recompiling any code, restarting any system, or reloading any script. Typically, if a mapping is specified in software through a Max/MSP program, C program, etc. the part of the code that specifies the mapping must be modified and recompiled or reinterpreted before the new mapping becomes active. Any DMI that embeds Libmapper in its control and sound generation software can have its mapping modified simply by being sent specific messages as specified by the mapping protocol. 
+One is that a mapping between control and sound generation can be modified without recompiling any code, restarting any system, or reloading any script. Typically, if a mapping is specified in software through a Max/MSP program, C program, etc. then the part of the code that specifies the mapping must be modified and recompiled or reinterpreted before the new mapping becomes active. Any DMI that embeds Libmapper in its control and sound generation software can have its mapping modified simply by being sent specific messages as specified by the mapping protocol. 
 
-Another useful characteristic is that in the case of a local network with many different control mechanisms and sound generation mechanisms available, no central device is needed to facilitate communication between devices. If one component on the network expriences some difficulties, the other devices will still be able to keep the mappings between the remaining devices operating.  
+Another useful characteristic is that, in the case of a local network with many different control mechanisms and sound generation mechanisms available, no central device is needed to facilitate communication between devices. If one component on the network expriences some difficulties, the other devices will still be able to keep the mappings between the remaining devices operating.  
 
 Lastly, and of particular relevance to the primary topic of this paper, is that the current state of mappings between various devices on the network can be viewed and modified by any graphical user interface that embeds Libmapper. In Libmapper parlance, these applications can register as \emph{monitors}. Because of this capability, multiple members of a team can be viewing and modifying the same mappings for multiple DMIs using different computers and using different graphical user interfaces.  
 
@@ -394,4 +396,6 @@ It may be that it is unclear what control device ought to be linked to what soun
 
 Any tools and interfaces that speed up this iterative process and reduce the amount of Libmapper-specific/Mapper Protocol knowledge required to efficiently explore the possibilities of a particular MSN improves the usability of Libmapper and allows for a wider diversity of skill sets and roles in a broader performance project involving instrumentalists, composers, directors, and engineers to participate in the mapping task that is so crucial to the character of a musical system. 
 
-Advances in user interface design are historically a need driven by the specifics of the nature of the system that the user requires an interface to manipulate. Similarly, data visualization design is driven by the need of a user to develop understanding of a system from a complex set of data about a system so that they can correctly manipulate the system to match their intentions. This chapter has been a foundation for understanding the interface and visualization design decisions that are made in chapter 4 as coupled to the requirements and need for a mapping system. The next chapter presents a foundation for understanding the decisions in chapter 4 as coupled to what is known about what type of visualizations make a system easy to understand and what type of interfaces are effective for manipulating systems.
+Advances in user interface design are, historically, a need driven by the specifics of the nature of the system that the user requires an interface to manipulate. Similarly, data visualization design is driven by the need of a user to develop understanding of a system from a complex set of data about a system so that they can correctly manipulate the system to match their intentions. 
+
+This chapter has been a foundation for understanding the interface and visualization design decisions that are made in chapter 4 as coupled to the requirements and need for a mapping system. The next chapter presents a foundation for understanding the decisions in chapter 4 as coupled to what is known about what type of visualizations make a system easy to understand and what type of interfaces are effective for manipulating systems.
