--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -184,7 +184,7 @@ HCI practioners have long known about this interesting byproduct of the evolutio
 
 This basic understanding of recall and recognition provides an easily applicable rule for building an effective interface.
 
-\section{Hierarchies and Taxonomies}
+\section{Hierarchical Structures}
 
 \begin{comment}
 Papers:
@@ -236,6 +236,6 @@ The principle of \emph{tight coupling} in a user interface is of particular inte
 
 Typically when searching a database the system state begins by displaying an empty set of data because no query has been made. Once a query is executed than the interface displays a subset of data (in graphical or textual form) that correspond to the elements of the entire data set that match the search query. Conversely, when filtering a data set the initial state of the system with an empty query is to display the entire set of available data and to reduce the amount of information on the screen as the query becomes more specific. The difference is admittedly subtle. However, when a user is introduced to a large data set for the first time, the filtering convention is much less confusing because it is much more disorienting to be presented with a empty set of data than it is to be presented with too much data \cite{seeking1994}. It is more difficult for a user to determine what the first action to take should be in the former case.
 
-The purpose of introducing these aspects of cognition and effective design that others have discovered is not to provide a set of \emph{rules} to govern the decisions that are made in the Vizmapper design. Many of these connections between interfaces and cognition are not rigorously provable in the sense that the principles of physics or electrical engineering are arguably provable. The purpose of the introduction of this thesis, and specifically the initial quotation, is to make this clear from the outset. 
+The purpose of introducing these aspects of cognition and effective design that others have discovered is not to provide a set of \emph{rules} to govern the decisions that are made in the Vizmapper design. Many of these connections between interfaces and cognition are not rigorously provable in the sense that the principles of physics or electrical engineering are arguably provable. One of goals of the introduction of this thesis, and specifically the initial quotation, is to make this clear from the outset. 
 
 However, this is the minimum due diligence that ought to be applied when making a good faith attempt to \emph{improve} how someone accomplishes a task. The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the broad problem of designing a user interface and the specific problem of visualizing and manipulating a large data set through a graphical user interface. 
