--- a/vijay_thesis.bib
+++ b/vijay_thesis.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Vijay at 2011-08-04 14:33:32 -0400 
+%% Created for Vijay at 2011-08-05 13:31:49 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,6 +12,28 @@
 
 @string{icmc2010 = {Proc. of the 2010 International Computer Music Conference. San Francisco, Calif.: International Computer Music Association.}}
 
+
+@book{tuft2001,
+	Address = {Cheshire, Connecticut},
+	Author = {Edward Rolf Tufte},
+	Date-Added = {2011-08-05 13:30:11 -0400},
+	Date-Modified = {2011-08-05 13:31:33 -0400},
+	Edition = {2},
+	Publisher = {Graphics Press},
+	Title = {The Visual Display of Quantitative Information},
+	Year = {2001}}
+
+@article{orchestra2010,
+	Author = {Sean Ferguson and Marcelo M. Wanderley},
+	Date-Added = {2011-08-05 13:25:36 -0400},
+	Date-Modified = {2011-08-05 13:26:56 -0400},
+	Journal = {Journal of Interdisciplinary Music Studies},
+	Month = {Fall},
+	Number = {2},
+	Pages = {17-35},
+	Title = {The McGill Digital Orchestra: An Interdisciplinary Project on Digital Musical Instruments},
+	Volume = {4},
+	Year = {2010}}
 
 @inproceedings{clutter2004,
 	Author = {Wei Peng and Matthew O. Ward and Elke A. Rundensteiner},
